Colaboratory kullanılarak oluşturuldu

--- a/Basic.ipynb
+++ b/Basic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNb4ITVEKU9qC/aI+6iMcz+",
+      "authorship_tag": "ABX9TyOwljGso91NUadNN1HWacXF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -101,7 +101,7 @@
         "id": "jfpsHyyuBfLS",
         "outputId": "57ec6fc5-7462-4925-fd73-d224a9ddb031"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
         "id": "3Tge74O_hLo4",
         "outputId": "0cc10a7d-597d-4364-98f2-71a2c5ade8bf"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,7 +189,7 @@
         "id": "XR1PoNzgvXK_",
         "outputId": "8ad55b11-736a-4329-a488-6888b51b046d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,9 +267,246 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "Given an integer, n, and n space-separated integers as input, create a tuple, t, of those n integers. Then compute and print the result of hash(t).\n",
+        "\n",
+        "Note: hash() is one of the functions in the __builtins__ module, so it need not be imported.\n",
+        "\"\"\"\n",
+        "if __name__ == '__main__':\n",
+        "    n = int(input())\n",
+        "    integer_list = map(int, input().split())\n",
+        "    t=tuple(integer_list)\n",
+        "    print(hash(t))"
+      ],
+      "metadata": {
+        "id": "M9qlB3S4sW8n",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e1037b5b-b73c-4805-8f49-858583c14cd8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "1 2\n",
+            "-3550055125485641917\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "You are given a string and your task is to swap cases. In other words, convert all lowercase letters to uppercase letters and vice versa.\n",
+        "\"\"\"\n",
+        "def swap_case(s):\n",
+        "  o=\"\"\n",
+        "  for l in s:\n",
+        "    if l.islower():\n",
+        "      o=o+l.upper()\n",
+        "    elif l.isupper():\n",
+        "      o=o+l.lower()\n",
+        "    else: \n",
+        "      o=o+l\n",
+        "  return o\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    s = input()\n",
+        "    result = swap_case(s)\n",
+        "    print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "itNDZ8HMa764",
+        "outputId": "c17c6c36-a4b9-4f7c-c10c-298551c6c3f0"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Meh\n",
+            "mEH\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def split_and_join(line):\n",
+        "    return \"-\".join(line.split())\n",
+        "    # write your code here\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    line = input()\n",
+        "    result = split_and_join(line)\n",
+        "    print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yHNVQkZS0ByI",
+        "outputId": "938d5363-d8c9-4845-8f85-7b422786cb3d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a b c\n",
+            "a-b-c\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#\n",
+        "# Complete the 'print_full_name' function below.\n",
+        "#\n",
+        "# The function is expected to return a STRING.\n",
+        "# The function accepts following parameters:\n",
+        "#  1. STRING first\n",
+        "#  2. STRING last\n",
+        "#\n",
+        "\n",
+        "def print_full_name(first, last):\n",
+        "    # Write your code here\n",
+        "    print(\"Hello \"+first+\" \"+last+\"! You just delved into python.\")\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    first_name = input()\n",
+        "    last_name = input()\n",
+        "    print_full_name(first_name, last_name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3-T-yaLK1cdS",
+        "outputId": "1c289660-4a55-4a2d-9c34-020313f0df52"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "b\n",
+            "Hello a b! You just delved into python.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "Task\n",
+        "Read a given string, change the character at a given index and then print the modified string.\n",
+        "Function Description\n",
+        "\n",
+        "Complete the mutate_string function in the editor below.\n",
+        "\n",
+        "mutate_string has the following parameters:\n",
+        "\n",
+        "string string: the string to change\n",
+        "int position: the index to insert the character at\n",
+        "string character: the character to insert\n",
+        "\"\"\"\n",
+        "\n",
+        "\n",
+        "def mutate_string(string, position, character):\n",
+        "    newS=string[:position]+character+string[position+1:]\n",
+        "    return newS\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    s = input()\n",
+        "    i, c = input().split()\n",
+        "    s_new = mutate_string(s, int(i), c)\n",
+        "    print(s_new)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cObrsdewJs7i",
+        "outputId": "7efa80f8-9f90-4265-cd12-49972fdc2152"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "abracadabra\n",
+            "5 k\n",
+            "abrackdabra\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "In this challenge, the user enters a string and a substring. You have to print the number of times that the substring occurs in the given string. String traversal will take place from left to right, not from right to left.\n",
+        "\n",
+        "NOTE: String letters are case-sensitive.\n",
+        "\"\"\"\n",
+        "def count_substring(string, sub_string):\n",
+        "    count=0\n",
+        "    for i in range(len(string)):\n",
+        "      if string[i:i+len(sub_string)]==sub_string:\n",
+        "        count+=1\n",
+        "    return count\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    string = input().strip()\n",
+        "    sub_string = input().strip()\n",
+        "    \n",
+        "    count = count_substring(string, sub_string)\n",
+        "    print(count)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vDV6UuTe_E4c",
+        "outputId": "20289c36-dcfd-461f-b267-52adb6a00753"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ABCDCDC\n",
+            "CDC\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "M9qlB3S4sW8n"
+        "id": "Rti-7H9kdnuv"
       },
       "execution_count": null,
       "outputs": []
